build: Bump Go to 1.20
Signed-off-by: Paulo Gomes <paulo.gomes@suse.com>

--- a/.github/workflows/test_wasip1.yml
+++ b/.github/workflows/test_wasip1.yml
@@ -5,9 +5,12 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.21.x]
+        go-version: [1.21.x,1.22.x]
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
     - name: Install Go
       uses: actions/setup-go@v3
       with:
@@ -16,9 +19,6 @@ jobs:
     - name: Install wasirun
       run: |
         go install github.com/stealthrocket/wasi-go/cmd/wasirun@latest
-
-    - name: Checkout code
-      uses: actions/checkout@v3
 
     - name: Test
       run: make wasitest
